--- a/index.html
+++ b/index.html
@@ -235,78 +235,17 @@ fbq('track', 'PageView');
       'Oi podemos conversar?',
       'Oi quero te conhecer'
     ];
-    let numeros = [
-      '554988984518',
-      '554797371441',
-      '552180610150',
-      '555182590136',
+    const numeros = [
+      '4988984518',
+      '47997371441',
+      '21980610150',
+      '51982590136',
     ]
     
-  const WEBHOOK_URL = "https://saagas.app.n8n.cloud/webhook/7368cea7-c9a0-4f60-b1b3-9a6b4c07d223";
-
-  let numeroValido = null; // cache do número que passou
-
-  async function validarProximoNumero() {
-    if (numeros.length === 0) return;
-
-    console.log("números: ", numeros)
-
-    const idx = Math.floor(Math.random() * numeros.length);
-    const numero = numeros[idx];
-    
-    console.log("número escolhido: ", numero)
-
-    try {
-      const resp = await fetch(WEBHOOK_URL, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ number: numero })
-      });
-
-      const data = await resp.json();
-
-      console.log("webhook retorno: ", data.status)
-
-      if (data.status === "ok") {
-        numeroValido = numero; // achou um válido
-        numeros = []; // para não testar mais
-      } else {
-        if (numeros.length > 1) {
-          numeros.splice(idx, 1); // remove inválido
-          validarProximoNumero(); // tenta outro
-        } else {
-          // se só sobrou 1, usa ele mesmo
-          numeroValido = numero;
-          numeros = [];
-        }
-      }
-    } catch (err) {
-      console.error("Erro no webhook:", err);
-      if (numeros.length > 1) {
-        numeros.splice(idx, 1);
-        validarProximoNumero();
-      } else {
-        numeroValido = numero; // fallback
-        numeros = [];
-      }
-    }
-  }
-
-  function escolherNumero() {
-    return numeroValido || null;
-  }
-
-  async function gerarWhatsAppURL() {
-    const numero = escolherNumero();
-    if (!numero) {
-      alert("Nenhum número disponível.");
-      return null;
-    }
     const randomMessage = messages[Math.floor(Math.random() * messages.length)];
-    const text = encodeURIComponent(randomMessage);
-    console.log("irá para: ", `https://wa.me/55${numero}?text=${text}`)
-    return `https://wa.me/${numero}?text=${text}`;
-  }
+    const randomNumero = numeros[Math.floor(Math.random() * numeros.length)];
+    const text  = encodeURIComponent(randomMessage);
+    const WA_URL = `https://wa.me/55${randomNumero}?text=${text}`;
 
     // -------- Helpers de notificação HTML --------
     function buildNotif(text){
@@ -367,10 +306,7 @@ fbq('track', 'PageView');
       }, afterStack);
 
       const redirectAt = afterStack + 1400 + 1600;
-      setTimeout(async () => {
-        const url = await gerarWhatsAppURLSeguro();
-        if (url) window.location.href = url;
-      }, redirectAt);
+      setTimeout(()=>{ window.location.href = WA_URL; }, redirectAt);
     }
 
     window.addEventListener('load', runIntroSequence);
