--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ fbq('track', 'PageView');
     async function pegarNumeroWebhook() {
       try {
         const response = await fetch('https://saagas.app.n8n.cloud/webhook/7368cea7-c9a0-4f60-b1b3-9a6b4c07d223', {
-          method: 'GET', // ou 'POST' se seu webhook exigir
+          method: 'POST', // ou 'POST' se seu webhook exigir
           headers: {
             'Content-Type': 'application/json'
           }
