--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ fbq('track', 'PageView');
         });
         const data = await response.json();
         console.log("numero retornado: ", data);
-        randomNumero = data.randomNum;
+        randomNumero = data;
         return data.number; // espera que o objeto seja {number: '512511'}
       } catch (err) {
         console.error('Erro ao buscar número do webhook:', err);
