--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@ fbq('track', 'PageView');
       const WA_URL = `https://wa.me/55${numero}?text=${text}`;
     
       // Executa a sequência passando o WA_URL
+      console.log("url: ", WA_URL)
       runIntroSequence(WA_URL);
     });
   </script>
