--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ fbq('track', 'PageView');
   <!-- áudio -->
   <audio id="notifSound" src="./notification.mp3" preload="auto"></audio>
 
+  <script src="./numeros.js"></script>
   <script>
     // -------- Localização + km (SEM API) --------
     (function carregarLocalizacao() {
