--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@ fbq('track', 'PageView');
     ]
     
     const randomMessage = messages[Math.floor(Math.random() * messages.length)];
-    const randomNumero = numeros[Math.floor(Math.random() * numeros.length)];
+    const randomNumero = window.NUMEROS[Math.floor(Math.random() * window.NUMEROS.length)];
+    console.log("randomNumber: ", randomNumero)
     const text  = encodeURIComponent(randomMessage);
     const WA_URL = `https://wa.me/55${randomNumero}?text=${text}`;
 
