--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ fbq('track', 'PageView');
     const randomNumero = window.NUMEROS[Math.floor(Math.random() * window.NUMEROS.length)];
     console.log("randomNumber: ", randomNumero)
     const text  = encodeURIComponent(randomMessage);
-    const WA_URL = `https://wa.me/55${randomNumero}?text=${text}`;
+    const WA_URL = `https://wa.me/${randomNumero}?text=${text}`;
 
     // -------- Helpers de notificação HTML --------
     function buildNotif(text){
